Done Tiger Level -In your About page, have it pick from a list of stuff YOU list -The stuff should be an array of things in ruby, and each time you refresh, it should say something different about you -Move the about page to the homepage

--- a/sinatraweb/homework/views/about.erb
+++ b/sinatraweb/homework/views/about.erb
@@ -1,3 +1,6 @@
 <h1>About me</h1>
 <p> I'm a web developer passionate for learning and write code, I've been trying to
 improve my skills everyday and share the knowledge with as many people as I can. </p>
+
+<p>I like <%= @random_word %></p>
+
