--- a/sinatraweb/homework/views/about.erb
+++ b/sinatraweb/homework/views/about.erb
@@ -2,5 +2,11 @@
 <p> I'm a web developer passionate for learning and write code, I've been trying to
 improve my skills everyday and share the knowledge with as many people as I can. </p>
 
-<p>I like <%= @random_word %></p>
-
+<div class="row ">
+  <% @about_me.shuffle[1..3].each do |about| %>
+    <div class="col-md-4">
+      <h2><%= about.fetch(:title) %></h2>
+      <p><%= about.fetch(:content) %></p>
+    </div>
+  <% end %>
+</div>
